# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = postgres
version = 4.0
author = Chad Whitacre et al.
author_email = chad@zetaweb.com
url = https://github.com/liberapay/postgres.py
description = postgres is a high-value abstraction over psycopg2.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = sql postgresql psycopg2
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: SQL
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    psycopg2-binary >= 2.8
    psycopg2-pool
setup_requires =
    setuptools >= 39.2.0
